--- a/packages/ingest-mongodb-public/.env.example
+++ b/packages/ingest-mongodb-public/.env.example
@@ -16,3 +16,8 @@ DEVCENTER_CONNECTION_URI="mongodb+srv://<username>:<password>@devhub-cluster.sew
 UNIVERSITY_DATA_API_KEY=abc123
 # For use with GitHubDataSource. The token only needs read access to the repo.
 GITHUB_ACCESS_TOKEN=ghp_TOKENTOKENTOKEN
+
+# For Website CMS
+MONGODB_DOT_COM_CONNECTION_URI="mongodb+srv://..."
+MONGODB_DOT_COM_DB_NAME=<name of DB in dotcom cluster>
+MONGODB_COACH_GTM_DATABASE_NAME=<some DB name>
