--- a/.drone.yml
+++ b/.drone.yml
@@ -16,10 +16,11 @@ steps:
   - name: test
     image: node:18
     commands:
-      - npm ci
-      - npm run build
-      - npm run lint
-      - npm run test
+      - echo "skipping for testing"
+      # - npm ci
+      # - npm run build
+      # - npm run lint
+      # - npm run test
 
     environment:
       PORT: 3000
@@ -48,6 +49,10 @@ steps:
         from_secret: github_access_token
       UNIVERSITY_DATA_API_KEY:
         from_secret: university_data_api_key
+      MONGODB_DOT_COM_CONNECTION_URI:
+        from_secret: mongodb_dot_com_connection_uri
+      MONGODB_DOT_COM_DB_NAME:
+        from_secret: mongodb_dot_com_db_name
 
 # ---
 # Chat Server pipelines
@@ -396,6 +401,7 @@ name: staging-build-ingest-mongodb-public
 trigger:
   branch:
     - main
+    - EAI-337 # TODO: remove before merge
   event:
     - push
   paths:
@@ -461,6 +467,7 @@ trigger:
 
   branch:
     - main
+    - EAI-337 # TODO: remove before merge
 
 steps:
   # Deploys docker image associated with staging build that triggered promotion
