--- a/.drone.yml
+++ b/.drone.yml
@@ -16,11 +16,10 @@ steps:
   - name: test
     image: node:18
     commands:
-      - echo "skipping for testing"
-      # - npm ci
-      # - npm run build
-      # - npm run lint
-      # - npm run test
+      - npm ci
+      - npm run build
+      - npm run lint
+      - npm run test
 
     environment:
       PORT: 3000
@@ -401,7 +400,6 @@ name: staging-build-ingest-mongodb-public
 trigger:
   branch:
     - main
-    - EAI-337 # TODO: remove before merge
   event:
     - push
   paths:
@@ -467,7 +465,6 @@ trigger:
 
   branch:
     - main
-    - EAI-337 # TODO: remove before merge
 
 steps:
   # Deploys docker image associated with staging build that triggered promotion
