--- a/.drone.yml
+++ b/.drone.yml
@@ -48,6 +48,10 @@ steps:
         from_secret: github_access_token
       UNIVERSITY_DATA_API_KEY:
         from_secret: university_data_api_key
+      MONGODB_DOT_COM_CONNECTION_URI:
+        from_secret: mongodb_dot_com_connection_uri
+      MONGODB_DOT_COM_DB_NAME:
+        from_secret: mongodb_dot_com_db_name
 
 # ---
 # Chat Server pipelines
