Combine esm & cjs vite configs

--- a/packages/mongodb-chatbot-ui/package.json
+++ b/packages/mongodb-chatbot-ui/package.json
@@ -25,26 +25,27 @@
     "build",
     "README.md"
   ],
-  "module": "./build/index.js",
-  "main": "./build/cjs/mongodb-chatbot-ui.cjs.js",
+  "module": "./build/es/index.js",
+  "main": "./build/cjs/mongodb-chatbot-ui.js",
   "types": "./build/types/index.d.ts",
   "exports": {
     ".": {
-      "import": "./build/index.js",
-      "require": "./build/cjs/mongodb-chatbot-ui.cjs.js",
+      "import": "./build/es/index.js",
+      "require": "./build/cjs/mongodb-chatbot-ui.js",
       "types": "./build/types/index.d.ts"
     },
     "./*": {
-      "import": "./build/*.js",
-      "require": "./build/cjs/*",
+      "import": "./build/es/*.js",
+      "require": "./build/cjs/*.js",
       "types": "./build/types/*.d.ts"
     }
   },
   "scripts": {
     "build": "npm run build:component && npm run build:component:cjs && if [ \"$ENVIRONMENT\" = \"qa\" ]; then npm run build:static-site:qa && echo \"qa\"; else npm run build:static-site:staging; fi",
     "build:dts": "tsc --project tsconfig.declarations.json",
-    "build:component": "tsc && vite build --config vite.config.component.js && npm run build:dts",
-    "build:component:cjs": "tsc && vite build --config vite.config.component.cjs.js",
+    "build:component": "npm run build:component:esm && npm run build:component:cjs && npm run build:dts",
+    "build:component:esm": "tsc && VITE_MODULE_FORMAT=es vite build --config vite.config.component.js",
+    "build:component:cjs": "tsc && VITE_MODULE_FORMAT=cjs vite build --config vite.config.component.js",
     "build:static-site:dev": "tsc && VITE_GIT_COMMIT=$(npm run --silent env:get-git-commit) vite build --config vite.config.static-site.js --mode development",
     "build:static-site:staging": "tsc && VITE_GIT_COMMIT=$(npm run --silent env:get-git-commit) vite build --config vite.config.static-site.js --mode staging",
     "build:static-site:qa": "tsc && VITE_GIT_COMMIT=$(npm run --silent env:get-git-commit) vite build --config vite.config.static-site.js --mode qa",
