Remove deleted vite config from tsconfig

--- a/packages/mongodb-chatbot-ui/tsconfig.node.json
+++ b/packages/mongodb-chatbot-ui/tsconfig.node.json
@@ -6,5 +6,5 @@
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.component.ts", "vite.config.component.cjs.ts"]
+  "include": ["vite.config.component.ts"]
 }
