--- a/packages/chatbot-eval-mongodb-public/environments/staging.yml
+++ b/packages/chatbot-eval-mongodb-public/environments/staging.yml
@@ -25,6 +25,7 @@ cronJobs:
       limits:
         cpu: 500m
         memory: 5Gi
+    backoffLimit: 3
   - name: faq-eval-quality
     schedule: "30 4 * * *" # every day at 4am UTC (11PM EST)
     command: ["npm", "run", "eval:faqConversationQualityCheckPipeline"]
@@ -47,6 +48,7 @@ cronJobs:
       limits:
         cpu: 500m
         memory: 5Gi
+    backoffLimit: 3
 
 # Alerts
 defaultAlerts:
