--- a/packages/scripts/environments/production.yml
+++ b/packages/scripts/environments/production.yml
@@ -19,6 +19,7 @@ cronJobs:
       limits:
         cpu: 500m
         memory: 5Gi
+    backoffLimit: 3
 
   - name: analyze
     schedule: "0 7 * * *" # every day at 7am UTC
@@ -41,6 +42,7 @@ cronJobs:
       limits:
         cpu: 500m
         memory: 5Gi
+    backoffLimit: 3
 
   - name: find-faq
     schedule: "0 8 * * *" # every day at 8am UTC
@@ -61,6 +63,7 @@ cronJobs:
       limits:
         cpu: 500m
         memory: 5Gi
+    backoffLimit: 3
 
 # Alerts
 defaultAlerts:
