--- a/packages/scripts/environments/staging.yml
+++ b/packages/scripts/environments/staging.yml
@@ -19,6 +19,7 @@ cronJobs:
       limits:
         cpu: 500m
         memory: 5Gi
+    backoffLimit: 3
 
   - name: analyze
     schedule: "0 7 * * *" # every day at 7am UTC
@@ -41,6 +42,7 @@ cronJobs:
       limits:
         cpu: 500m
         memory: 5Gi
+    backoffLimit: 3
 
   - name: clean-up-test-databases-dev
     schedule: 0 8 * * SUN
@@ -55,6 +57,7 @@ cronJobs:
       limits:
         cpu: 500m
         memory: 5Gi
+    backoffLimit: 3
 
   - name: clean-up-test-databases-test
     schedule: 0 9 * * SUN
@@ -69,6 +72,7 @@ cronJobs:
       limits:
         cpu: 500m
         memory: 5Gi
+    backoffLimit: 3
 
 # Alerts
 defaultAlerts:
