--- a/packages/chatbot-server-mongodb-public/package.json
+++ b/packages/chatbot-server-mongodb-public/package.json
@@ -26,11 +26,13 @@
   },
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.5",
+    "@langchain/openai": "^0.0.28",
     "common-tags": "^1.8.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb-chatbot-server": "*",
+    "openai": "^4.44.0",
     "pm2": "^5.3.0"
   },
   "devDependencies": {
