update env example

--- a/packages/mongodb-artifact-generator/.env.example
+++ b/packages/mongodb-artifact-generator/.env.example
@@ -4,3 +4,6 @@ OPENAI_API_KEY=<api_key>
 OPENAI_CHAT_COMPLETION_DEPLOYMENT=<deployment_name>
 OPENAI_EMBEDDING_DEPLOYMENT=<deployment_name>
 OPENAI_ENDPOINT=https://<resource_name>.openai.azure.com/
+GITHUB_ACCESS_TOKEN=<GitHub Personal Access Token> # https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens
+JIRA_USERNAME=<Jira Bot Username>
+JIRA_PASSWORD=<Jira Bot Password>
