--- a/packages/mongodb-chatbot-ui/package.json
+++ b/packages/mongodb-chatbot-ui/package.json
@@ -64,8 +64,8 @@
     "build-storybook": "storybook build",
     "release:interactive": "release-it",
     "release": "release-it",
-    "test": "vitest run",
-    "test:watch": "vitest"
+    "test": "VITE_GIT_COMMIT=$(npm run --silent env:get-git-commit) vitest run",
+    "test:watch": "VITE_GIT_COMMIT=$(npm run --silent env:get-git-commit) vitest"
   },
   "bundleDependencies": [
     "mongodb-rag-core"
@@ -120,8 +120,10 @@
     "@storybook/react": "^7.0.20",
     "@storybook/react-vite": "^7.0.20",
     "@storybook/testing-library": "^0.0.14-next.2",
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
     "@types/react-transition-group": "^4.4.6",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
@@ -131,6 +133,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "eslint-plugin-storybook": "^0.6.12",
+    "event-source-polyfill": "^1.0.31",
+    "eventsource": "^2.0.2",
     "jsdom": "^22.1.0",
     "mocksse": "^1.0.4",
     "node-stdlib-browser": "^1.2.0",
