--- a/.drone.yml
+++ b/.drone.yml
@@ -8,6 +8,7 @@ trigger:
     - tag
   paths:
     include:
+      - .drone.yml
       - packages/**/*
       - package-lock.json
       - package.json
