(EAI-350) POC - Synthesize a Changelog

--- a/packages/mongodb-artifact-generator/context/release-notes/atlas-cli-releaseInfo.yaml
+++ b/packages/mongodb-artifact-generator/context/release-notes/atlas-cli-releaseInfo.yaml
@@ -6,6 +6,14 @@ github:
 jira:
   project: "CLOUDP"
   version: "atlascli-1.22.0"
+# github:
+#   owner: "mongodb"
+#   repo: "mongodb-atlas-cli"
+#   version: "atlascli/v1.18.0"
+#   previousVersion: "atlascli/v1.17.0"
+# jira:
+#   project: "CLOUDP"
+#   version: "atlascli-1.18.0"
 projectDescription: >-
   The MongoDB Atlas CLI (Command Line Interface) allows you to manage MongoDB
   Atlas resources directly from the command line. MongoDB Atlas is a fully-managed
