--- a/packages/mongodb-artifact-generator/tsconfig.json
+++ b/packages/mongodb-artifact-generator/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "lib": ["ES2022"],
+    "target": "ES2022",
     "outDir": "./build"
   },
   "include": ["./src/**/*.ts"]
