append header in dev

--- a/packages/chatbot-server-mongodb-public/.env.example
+++ b/packages/chatbot-server-mongodb-public/.env.example
@@ -11,6 +11,4 @@ MONGODB_DATABASE_NAME=<docs-chatbot-ENV>
 VECTOR_SEARCH_INDEX_NAME=<index_name>
 NODE_ENV=development
 ALLOWED_ORIGINS=http://example.com,http://localhost:5173
-RADIANT_BASE_URL="<some radiant uri>"
-RADIANT_API_KEY="<some radiant API key>"
-AUTH_COOKIE="<mongodb auth cookies>"
+AUTH_COOKIE="<mongodb auth cookies> ONLY for local development"
