--- a/packages/mongodb-artifact-generator/context/release-notes/atlas-cli-releaseInfo.yaml
+++ b/packages/mongodb-artifact-generator/context/release-notes/atlas-cli-releaseInfo.yaml
@@ -1,8 +1,8 @@
-github:
-  owner: "mongodb"
-  repo: "mongodb-atlas-cli"
-  version: "atlascli/v1.22.0"
-  previousVersion: "atlascli/v1.21.0"
+# github:
+#   owner: "mongodb"
+#   repo: "mongodb-atlas-cli"
+#   version: "atlascli/v1.22.0"
+#   previousVersion: "atlascli/v1.21.0"
 jira:
   project: "CLOUDP"
   version: "atlascli-1.22.0"
