--- a/package.json
+++ b/package.json
@@ -73,6 +73,9 @@
         "html-to-text": "^9.0.5",
         "langchain": "^0.2.0",
         "md5": "^2.3.0",
+        "mongodb-chatbot-server": "^0.9.1",
+        "mongodb-rag-core": "^0.3.1",
+        "mongodb-rag-ingest": "^0.2.0",
         "office-text-extractor": "^3.0.3",
         "sitemapper": "^3.1.8",
         "usetube": "^2.0.2",
