--- a/packages/mongodb-artifact-generator/package.json
+++ b/packages/mongodb-artifact-generator/package.json
@@ -53,6 +53,7 @@
     "@octokit/rest": "^20.1.0",
     "@supercharge/promise-pool": "^3.2.0",
     "@types/jira-client": "^7.1.9",
+    "case": "^1.6.3",
     "common-tags": "^1.8.2",
     "dotenv": "^16.4.5",
     "front-matter": "^4.0.2",
@@ -61,6 +62,7 @@
     "papaparse": "^5.4.1",
     "yaml": "^2.3.1",
     "yargs": "^17",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zod-to-json-schema": "^3.23.1"
   }
 }
