--- a/packages/model-eval/.env.example
+++ b/packages/model-eval/.env.example
@@ -1,8 +1,11 @@
 MONGODB_CONNECTION_URI="mongodb+srv://..."
 MONGODB_DATABASE_NAME="..."
-MONGODB_QUIZ_QUESTIONS_DATABASE_NAME=<TODO: add>
-MONGODB_QUIZ_QUESTIONS_CONNECTION_URI=<TODO: add>
-MONGODB_QUIZ_QUESTIONS_COLLECTION_NAME=<TODO: add>
-RADIANT_ENDPOINT=<TODO: add>
-RADIANT_API_KEY=<TODO: add>
-MONGODB_AUTH_COOKIE=<TODO: add>
+# Note: The quiz questions are stored in staging
+MONGODB_QUIZ_QUESTIONS_CONNECTION_URI="mongodb+srv://<user>:<pass>@docs-chatbot-staging.ngvo1.mongodb.net/?retryWrites=true&w=majority"
+MONGODB_QUIZ_QUESTIONS_DATABASE_NAME="datasets"
+MONGODB_QUIZ_QUESTIONS_COLLECTION_NAME="quiz_questions"
+# Note: We use the Azure-OpenAI style passthrough for the Radiant endpoint
+RADIANT_ENDPOINT="<base_url>/azure"
+RADIANT_API_KEY="rad-API_KEY-iant"
+# Cookie must be updated daily
+MONGODB_AUTH_COOKIE="<Auth cookie from CorpSecure-protected site>"
