--- a/packages/mongodb-chatbot-evaluation/package.json
+++ b/packages/mongodb-chatbot-evaluation/package.json
@@ -52,6 +52,7 @@
     "@azure/openai": "^1.0.0-beta.11",
     "@langchain/core": "^0.1.48",
     "@langchain/openai": "^0.0.22",
+    "@supercharge/promise-pool": "^3.2.0",
     "axios": "^1.6.7",
     "common-tags": "^1.8.2",
     "express": "^4.18.2",
