--- a/packages/mongodb-chatbot-evaluation/package.json
+++ b/packages/mongodb-chatbot-evaluation/package.json
@@ -55,6 +55,7 @@
     "@supercharge/promise-pool": "^3.2.0",
     "axios": "^1.6.7",
     "common-tags": "^1.8.2",
+    "exponential-backoff": "^3.1.1",
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "langchain": "^0.1.28",
