Apply suggestions from code review

--- a/packages/mongodb-chatbot-evaluation/package.json
+++ b/packages/mongodb-chatbot-evaluation/package.json
@@ -42,8 +42,7 @@
     "lint": "eslint ./src --ext ts --report-unused-disable-directives",
     "lint:fix": "npm run lint -- --fix && prettier ./src --check --write",
     "release": "release-it",
-    "test": "jest --forceExit",
-    "shuffle": "node ./build/generate/shuffleQuizData.js"
+    "test": "jest --forceExit"
   },
   "bugs": {
     "url": "https://github.com/mongodb/chatbot/issues"
