--- a/packages/mongodb-chatbot-evaluation/package.json
+++ b/packages/mongodb-chatbot-evaluation/package.json
@@ -42,7 +42,8 @@
     "lint": "eslint ./src --ext ts --report-unused-disable-directives",
     "lint:fix": "npm run lint -- --fix && prettier ./src --check --write",
     "release": "release-it",
-    "test": "jest --forceExit"
+    "test": "jest --forceExit",
+    "shuffle": "node ./build/generate/shuffleQuizData.js"
   },
   "bugs": {
     "url": "https://github.com/mongodb/chatbot/issues"
@@ -51,8 +52,10 @@
     "@azure/openai": "^1.0.0-beta.11",
     "@langchain/core": "^0.1.48",
     "@langchain/openai": "^0.0.22",
+    "@supercharge/promise-pool": "^3.2.0",
     "axios": "^1.6.7",
     "common-tags": "^1.8.2",
+    "exponential-backoff": "^3.1.1",
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "langchain": "^0.1.28",
