--- a/packages/mongodb-rag-core/package.json
+++ b/packages/mongodb-rag-core/package.json
@@ -60,7 +60,7 @@
   },
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.5",
-    "@langchain/azure-openai": "^0.0.6",
+    "@langchain/openai": "^0.2.1",
     "@langchain/core": "^0.2.9",
     "common-tags": "^1",
     "dotenv": "^16.3.1",
