--- a/packages/chatbot-eval-mongodb-public/package.json
+++ b/packages/chatbot-eval-mongodb-public/package.json
@@ -27,7 +27,8 @@
     "pipeline:faqConversationQualityCheck": "node ./build/pipelines/faqConversationQualityCheck.js",
     "pipeline:linkInclusionCheck": "node ./build/pipelines/linkInclusionCheck.js",
     "pipeline:llmConversationQualityCheck": "node ./build/pipelines/llmConversationQualityCheck.js",
-    "pipeline:biasConversationQualityCheck": "node ./build/pipelines/biasConversationQualityCheck.js"
+    "pipeline:biasConversationQualityCheck": "node ./build/pipelines/biasConversationQualityCheck.js",
+    "pipeline:patronusRagCheck": "node ./build/pipelines/patronusRagCheck.js"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7",
