--- a/packages/chatbot-eval-mongodb-public/package.json
+++ b/packages/chatbot-eval-mongodb-public/package.json
@@ -28,7 +28,9 @@
     "pipeline:linkInclusionCheck": "node ./build/pipelines/linkInclusionCheck.js",
     "pipeline:llmConversationQualityCheck": "node ./build/pipelines/llmConversationQualityCheck.js",
     "pipeline:biasConversationQualityCheck": "node ./build/pipelines/biasConversationQualityCheck.js",
-    "pipeline:patronusRagCheck": "node ./build/pipelines/patronusRagCheck.js"
+    "pipeline:patronusRagCheck": "node ./build/pipelines/patronusRagCheck.js",
+    "pipeline:patronusDiscoveryCheck": "node ./build/pipelines/patronusDiscoveryCheck.js",
+    "pipeline:patronusQuizCheck": "node ./build/pipelines/patronusQuizCheck.js"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7",
