init braintrust evals

--- a/packages/chatbot-eval-mongodb-public/.env.example
+++ b/packages/chatbot-eval-mongodb-public/.env.example
@@ -5,3 +5,5 @@ OPENAI_CHAT_COMPLETION_DEPLOYMENT=<some chatgpt api deployment>
 OPENAI_GPT_4_CHAT_COMPLETION_DEPLOYMENT=<some gpt4 chatgpt api deployment>
 OPENAI_ENDPOINT=<Some endpoint>
 OPENAI_API_KEY=<some api key>
+BRAINTRUST_API_KEY=<some api key>
+OPENAI_OPENAI_API_KEY=<from not azure openai>
