--- a/packages/chatbot-eval-mongodb-public/package.json
+++ b/packages/chatbot-eval-mongodb-public/package.json
@@ -50,13 +50,15 @@
   },
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.11",
-    "autoevals": "^0.0.80",
+    "@supercharge/promise-pool": "^3.2.0",
+    "autoevals": "^0.0.81",
     "braintrust": "^0.0.145",
     "chatbot-server-mongodb-public": "*",
     "dotenv": "^16",
     "llamaindex": "^0.1.21",
     "mongodb-chatbot-evaluation": "*",
     "mongodb-chatbot-server": "*",
-    "mongodb-rag-core": "*"
+    "mongodb-rag-core": "*",
+    "zod": "^3.23.8"
   }
 }
