--- a/packages/mongodb-chatbot-server/tsconfig.json
+++ b/packages/mongodb-chatbot-server/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./build",
-    "lib": ["ES2023"],
+    "lib": ["ES2023"]
   },
   "include": ["./src/**/*.ts"]
 }
