Quiz question Few shot as messages (#452)
* init braintrust evals

* clearer code

* e2e

* finish braintrust evals

* run quiz evals w new prompting strategy

* update w latest

--- a/packages/chatbot-eval-mongodb-public/package.json
+++ b/packages/chatbot-eval-mongodb-public/package.json
@@ -27,7 +27,10 @@
     "pipeline:faqConversationQualityCheck": "node ./build/pipelines/faqConversationQualityCheck.js",
     "pipeline:linkInclusionCheck": "node ./build/pipelines/linkInclusionCheck.js",
     "pipeline:llmConversationQualityCheck": "node ./build/pipelines/llmConversationQualityCheck.js",
-    "pipeline:biasConversationQualityCheck": "node ./build/pipelines/biasConversationQualityCheck.js"
+    "pipeline:biasConversationQualityCheck": "node ./build/pipelines/biasConversationQualityCheck.js",
+    "braintrust:evaluateRagConversationsData": "node ./build/braintrust/evaluateRagConversationsData.js",
+    "braintrust:evaluateQuizQuestionsData": "node ./build/braintrust/evaluateQuizQuestionsData.js",
+    "braintrust:evaluateLlmDiscoveryData": "node ./build/braintrust/evaluateLlmDiscoveryData.js"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7",
@@ -50,11 +53,15 @@
   },
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.11",
+    "@supercharge/promise-pool": "^3.2.0",
+    "autoevals": "^0.0.81",
+    "braintrust": "^0.0.145",
     "chatbot-server-mongodb-public": "*",
     "dotenv": "^16",
     "llamaindex": "^0.1.21",
     "mongodb-chatbot-evaluation": "*",
     "mongodb-chatbot-server": "*",
-    "mongodb-rag-core": "*"
+    "mongodb-rag-core": "*",
+    "zod": "^3.23.8"
   }
 }
