(EAI-452): Experiment with Patronus API (#448)
* create patronus client

* patronus client

* skip tests b/c we dont want to run in CI

* EvaluateQualityFuncFactory

* Refactor as constructor funcs

* add patronus RAG check

* custom and exact evals

* patronus evals

--- a/packages/chatbot-eval-mongodb-public/package.json
+++ b/packages/chatbot-eval-mongodb-public/package.json
@@ -28,6 +28,10 @@
     "pipeline:linkInclusionCheck": "node ./build/pipelines/linkInclusionCheck.js",
     "pipeline:llmConversationQualityCheck": "node ./build/pipelines/llmConversationQualityCheck.js",
     "pipeline:biasConversationQualityCheck": "node ./build/pipelines/biasConversationQualityCheck.js",
+    "pipeline:patronusRagCheck": "node ./build/pipelines/patronusRagCheck.js",
+    "pipeline:patronusDiscoveryCheck": "node ./build/pipelines/patronusDiscoveryCheck.js",
+    "pipeline:patronusQuizCheck": "node ./build/pipelines/patronusQuizCheck.js",
+
     "braintrust:evaluateRagConversationsData": "node ./build/braintrust/evaluateRagConversationsData.js",
     "braintrust:evaluateQuizQuestionsData": "node ./build/braintrust/evaluateQuizQuestionsData.js",
     "braintrust:evaluateLlmDiscoveryData": "node ./build/braintrust/evaluateLlmDiscoveryData.js"
