--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
   "devDependencies": {
     "@stylistic/eslint-plugin-js": "^1.7.0",
     "lerna": "^5.6.2"
+  },
+  "dependencies": {
+    "@autoblocks/client": "^0.0.61"
   }
 }
