--- a/packages/chatbot-eval-mongodb-public/package.json
+++ b/packages/chatbot-eval-mongodb-public/package.json
@@ -34,7 +34,8 @@
     "braintrust:evaluateRagConversationsData": "node ./build/braintrust/evaluateRagConversationsData.js",
     "braintrust:evaluateQuizQuestionsData": "node ./build/braintrust/evaluateQuizQuestionsData.js",
     "braintrust:evaluateLlmDiscoveryData": "node ./build/braintrust/evaluateLlmDiscoveryData.js",
-    "autoblocks:evaluateRagConversationsData": "node ./build/autoblocks/evaluateRagConversationsData.js"
+    "autoblocks:evaluateRagConversationsData": "node ./build/autoblocks/evaluateRagConversationsData.js",
+    "autoblocksRunner": "autoblocks testing exec"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7",
@@ -56,6 +57,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@autoblocks/cli": "^0.0.39",
     "@azure/openai": "^1.0.0-beta.11",
     "@supercharge/promise-pool": "^3.2.0",
     "autoevals": "^0.0.81",
